--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=postulacionesapp
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/postulations
+spring.datasource.url=jdbc:mysql://mysql-container:3306/postulations
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
